Bug 237307 - Setting to show title bar not working
Summary: Setting to show title bar not working
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-11 23:40 UTC by David Houlden
Modified: 2010-05-12 02:41 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Houlden 2010-05-11 23:40:37 UTC
Version:           SVN 1125017 (using KDE 4.4.3)
OS:                Linux
Installed from:    Compiled From Sources

I have the option "Show title bar on each page turned off" but the titles are still shown. If I go to settings and switch the option on, click apply, switch the option off and click apply then the title bars are not displayed. However, next time kmymoney is started the title bars come back again.
Comment 1 Alvaro Soliverez 2010-05-12 02:41:57 UTC
SVN commit 1125703 by asoliverez:

Set the titlebar visible or hidden from the start according to settings.
TODO: change the way views are instanced to avoid code duplication regarding the title.

BUG:237307

 M  +3 -1      kmymoneyview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125703