Set the titlebar visible or hidden from the start according to settings. TODO: change the way views are instanced to avoid code duplication regarding the title.

BUG:237307

svn path=/trunk/playground/office/kmymoney/; revision=1125703